# metec-braille-driver

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE.md  README.md  appveyor.yml
8pin-adapter/: 8pin-adapter-cache.lib  8pin-adapter.kicad_pcb  8pin-adapter.plt  8pin-adapter.sch
arduino/: Makefile  README.md
arduino/examples/button_simple/: Makefile  button_simple.cpp
arduino/examples/buttons/: Makefile  buttons.cpp
arduino/examples/multi_cells/: Makefile  multi_cells.cpp
arduino/examples/pattern_change/: Makefile  pattern_change.cpp
arduino/examples/single_cell/: Makefile  single_cell.cpp
fritzing/: arduino-metec-braille.fzz  arduino-mini-metec-braille.fzz  raspberry-metec-braille.fzz
include/: braille.h  pch.h
raspberry/: README.md
raspberry/linux-wiringpi/: CMakeLists.txt  Makefile  README.md  clean.sh  liblouis_install.sh  run.sh
raspberry/linux-wiringpi/examples/: button_simple.cpp  buttons.cpp  liblouis_example.cpp  multi_cells.cpp  pattern_change.cpp  single_cell.cpp
raspberry/linux-wiringpi/metadata/: braille_driver.pc
raspberry/windows-iot/: README.md
raspberry/windows-iot/MetecDriver/: MetecDriver.sln
raspberry/windows-iot/MetecDriver/ExampleButtonSimple/: ExampleButtonSimple.csproj  ExampleButtonSimple_TemporaryKey.pfx  Package.appxmanifest  StartupTask.cs
raspberry/windows-iot/MetecDriver/ExampleButtons/: ExampleButtons.csproj  ExampleButtons_TemporaryKey.pfx  Package.appxmanifest  StartupTask.cs
raspberry/windows-iot/MetecDriver/ExampleMultiCell/: ExampleMultiCell.csproj  ExampleMultiCell_TemporaryKey.pfx  Package.appxmanifest  StartupTask.cs
raspberry/windows-iot/MetecDriver/ExamplePatternChange/: ExamplePatternChange.csproj  ExamplePatternChange.vcxproj  ExamplePatternChange.vcxproj.filters  ExamplePatternChange_TemporaryKey.pfx  Package.appxmanifest  StartupTask.cpp  StartupTask.cs  StartupTask.h
src/: braille.cpp
(+29 files in other folders)
